Build configuration updates (#100)
In preparation to land #99 , I'm extracting as many unrelated changes
into separate PRs so that we can land improvements more incrementally.
I'm letting Cursor Agent break down the branch and create the PRs so the
PR description.


---- 

This PR contains low-risk build configuration changes that prepare the
infrastructure for Java support.

## Changes

- Increase heap from 2G to 4G in `.jvmopts`
- Add JVM exports for javac access (needed for future Java support)
- Add heap dump on OOM options
- Downgrade scribe from 3.16.0 to 3.15.2
- Update sbtScala to 2.12.20
- Fix git hooks installation to work in worktrees

## Risk

Low - Pure build configuration with no code changes.

## Testing

The hooks fix ensures sbt works correctly in git worktrees by checking
if `.git/hooks` exists before writing to it.

Part of the stack to extract non-Java changes from olafurpg/java branch.

---------

Co-authored-by: Olafur Geirsson <olafurpg@gmail.com>